[package]
authors = ["Stuart Stock <stuart@int08h.com>", "Aaron Hill <aa1ronham@gmail.com>"]
description = "A Roughtime secure time sync server and client written in Rust"
edition = "2018"
keywords = ["roughtime", "cryptography", "crypto"]
license = "Apache-2.0"
name = "roughenough"
readme = "README.md"
repository = "https://github.com/int08h/roughenough"
version = "1.1.9"

[badges]
travis-ci = {repository = "int08h/roughenough", branch = "master"}

[features]
awskms = ["rusoto_core", "rusoto_kms", "bytes", "futures"]
default = []
gcpkms = ["google-cloudkms1", "hyper", "hyper-rustls", "serde", "serde_json", "yup-oauth2", "futures"]

[dependencies]
base64 = "0.13"
byteorder = "1"
chrono = "0.4"
clap = "2"
ctrlc = {version = "3.1", features = ["termination"]}
hex = "0.4"
humansize = "1"
log = "0.4"
mio = "0.6"
mio-extras = "2.0"
rand = "0.6"
ring = "0.16"
simple_logger = "1"
yaml-rust = "0.4"

# Used by 'awskms' and 'gcpkms'
futures = {version = "^0.3", optional = true}

# Used by 'awskms'
bytes = {version = "^1.0", optional = true}
rusoto_core = {version = "0.46", optional = true}
rusoto_kms = {version = "0.46", optional = true}

# Used by 'gcpkms'
google-cloudkms1 = {version = "2.0.4", optional = true}
hyper = {version = "^0.14", optional = true}
hyper-rustls = {version = "^0.22", optional = true}
serde = {version = "^1.0", optional = true}
serde_json = {version = "^1.0", optional = true}
yup-oauth2 = {version = "^5.0", optional = true}

[dev-dependencies]
criterion = "0.3"

[[bench]]
harness = false
name = "roughenough-bench"
